# honeybee_REVIVE_grasshopper

./: .gitignore  CLAUDE.md  README.md  direct_energy_comparison.html  hb_revive_installer.gh  hb_revive_installer.ghx  pyproject.toml  requirements.txt
.github/workflows/: release.yml
context/: ARCHITECTURE.md  CODING_STANDARDS.md  PRD.md  README.md  TECH_STACK.md
honeybee_revive_grasshopper/: .index.md
honeybee_revive_grasshopper/src/: HB-REVIVE - ADORB Fuel Type.py  HB-REVIVE - Add CO2 Reduction Measures to Model.py  HB-REVIVE - Add REVIVE Appliances to Rooms.py  HB-REVIVE - Add REVIVE HVAC Equipment Properties to Rooms.py  HB-REVIVE - Calc Resiliency Hours.py  HB-REVIVE - Calculate ADORB Costs.py  HB-REVIVE - Calculate Dew-Point Temp.py  HB-REVIVE - Create CO2 Reduction Measure.py  HB-REVIVE - Create REVIVE Appliance.py  HB-REVIVE - Create REVIVE HVAC Equipment Properties.py  HB-REVIVE - Create REVIVE Residential Program.py  HB-REVIVE - Create Resiliency EPW.py  HB-REVIVE - Create Resiliency Output Files.py  HB-REVIVE - Generate ADORB Output Graphs.py  HB-REVIVE - Generate Summer Resiliency Outputs.py  HB-REVIVE - Generate Winter Resiliency Outputs.py  HB-REVIVE - Get REVIVE Appliance from Standards Library.py  HB-REVIVE - Get REVIVE CO2-Measures from Standards Library.py  HB-REVIVE - Load CO2 Reduction Measure.py  HB-REVIVE - Load REVIVE Appliance from Standards Library.py  HB-REVIVE - Load REVIVE CO2-Measures from Standards Library.py  HB-REVIVE - Load REVIVE Program from Standards.py  HB-REVIVE - Load REVIVE Schedules from Standards.py  HB-REVIVE - Set ADORB Simulation Output Variables.py  HB-REVIVE - Set Appliance REVIVE Properties.py  HB-REVIVE - Set Material REVIVE Properties.py  HB-REVIVE - Set Model Properties.py  HB-REVIVE - Set PV-Shade REVIVE Properties.py  HB-REVIVE - Set REVIVE Appliance Properties.py  HB-REVIVE - Set REVIVE Lighting Program Properties.py  HB-REVIVE - Set REVIVE Material Properties.py  HB-REVIVE - Set REVIVE PV-Shade Properties.py  HB-REVIVE - Set REVIVE Room Lighting Properties.py  HB-REVIVE - Set Resiliency Program.py  HB-REVIVE - Set Resiliency Simulation Output Variables.py  HB-REVIVE - Set Room REVIVE Lighting Properties.py  HB-REVIVE - Set Simulation Output Variables.py
honeybee_revive_grasshopper/user_objects/: HB-REVIVE - ADORB Fuel Type.ghuser  HB-REVIVE - Add CO2 Reduction Measures to Model.ghuser  HB-REVIVE - Add REVIVE Appliances to Rooms.ghuser  HB-REVIVE - Add REVIVE HVAC Equipment Properties to Rooms.ghuser  HB-REVIVE - Calc Resiliency Hours.ghuser  HB-REVIVE - Calculate ADORB Costs.ghuser  HB-REVIVE - Calculate Dew-Point Temp.ghuser  HB-REVIVE - Country.ghuser  HB-REVIVE - Create CO2 Reduction Measure.ghuser  HB-REVIVE - Create REVIVE Appliance.ghuser  HB-REVIVE - Create REVIVE HVAC Equipment Properties.ghuser  (+29 more)
honeybee_revive_rhino/: .index.md  _component_info_.py  run.py
planning/: .instructions.md  README.md  STATUS.md
sample_models/: example_ADORB.gh  example_Resiliency.gh
scripts/: update_installer_ghx.py
tests/: .index.md  honeybee_revive_test.gh  phius_rv2024_generate_model.gh  phius_rv2024_model.gh  phius_rv2024_model.hbjson  phius_rv2024_resiliency_test_model.gh  phius_rv2024_simulate_ADORB.gh  phius_rv2024_simulate_resiliency.gh  phius_rv2024_test_model.gh
(+228 files in other folders)
