[project]
name = "honeybee-REVIVE-Grasshopper"
version = "0.0.12"
description = "Rhino/Grasshopper components for the honeybee-REVIVE library."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU" }
authors = [{ name = "Ed May", email = "phtools@bldgtyp.com" }]
maintainers = [{ name = "Ed May", email = "phtools@bldgtyp.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = [
    "Honeybee",
    "Honeybee-Energy",
    "Passive House",
    "Building Retrofit",
    "Architecture",
    "Energy Modeling",
    "PHIUS",
    "ADORB",
    "Carbon Emissions",
    "Embodied Carbon",
    "Embodied CO2",
    "Rhino",
    "Grasshopper",
]
dependencies = ["ph-adorb", "honeybee-revive"]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "Grasshopper-stubs",
    "Rhino-stubs",
    "plotly",
    "kaleido",
    "pandas",
]

[project.urls]
homepage = "https://www.passivehousetools.com/"
repository = "https://github.com/PH-Tools/honeybee_REVIVE_grasshopper"

# -- Bump My Version ---------------------------------------------------------------
# This manages the RELEASE_VERSION in _component_info_.py
# The orchestrator workflow calls: bump-my-version bump patch|minor|major
[tool.bumpversion]
current_version = "0.2.1"
commit = true
tag = true
tag_name = "v{new_version}"
commit_message = "bump: Honeybee-REVIVE {current_version} -> {new_version} [skip ci]"

[[tool.bumpversion.files]]
filename = "honeybee_revive_rhino/_component_info_.py"
search = 'RELEASE_VERSION = "Honeybee-REVIVE v{current_version}"'
replace = 'RELEASE_VERSION = "Honeybee-REVIVE v{new_version}"'

# -- Code Quality ------------------------------------------------------------------
[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "F401",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F405"]
